--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,13 +12,19 @@ jobs:
       - name: Clonar repositorio
         uses: actions/checkout@v4
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login DockerHub
-        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build y Push imagen
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/lucia-villalobos:latest .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/lucia-villalobos:latest
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/docker-cicd-app:latest .
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/docker-cicd-app:latest
 
       - name: Desplegar en EC2
         uses: appleboy/ssh-action@v1.0.0
@@ -27,11 +33,10 @@ jobs:
           username: ec2-user
           key: ${{ secrets.VOCKEY }}
           port: 22
-          timeout: 30s
-          command_timeout: 10m
           script: |
-            echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/lucia-villalobos:latest
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/docker-cicd-app:latest
             docker stop app || true
             docker rm app || true
-            docker run -d --name app -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/lucia-villalobos:latest
+            docker run -d --name app -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/docker-cicd-app:latest
+
+
