--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,7 @@ jobs:
 
       - name: Build y Push imagen
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/docker-cicd-app:latest .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/docker-cicd-app:latest
+          docker buildx build -t ${{ secrets.DOCKERHUB_USERNAME }}/docker-cicd-app:latest . --push
 
       - name: Desplegar en EC2
         uses: appleboy/ssh-action@v1.0.0
@@ -38,3 +37,4 @@ jobs:
             docker stop app || true
             docker rm app || true
             docker run -d --name app -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/docker-cicd-app:latest
+
