--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,12 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build y Push imagen
-        run: |
-          docker buildx build --platform linux/amd64 -t ${{ secrets.DOCKERHUB_USERNAME }}/docker-cicd-app:latest . --push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/docker-cicd-app:latest
+          platforms: linux/amd64
 
       - name: Desplegar en EC2
         uses: appleboy/ssh-action@v1.0.0
@@ -37,6 +41,7 @@ jobs:
             docker stop app || true
             docker rm app || true
             docker run -d --name app -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/docker-cicd-app:latest
+
 
 
 
